--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.html
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.html
@@ -216,8 +216,22 @@
         </div>
       </div>
 
+           <!--Pulsanti in basso-->
+           <div class="row rowPers">
+            <div class="col">
+              <div class="contButton">
+                <button class="btn buttonPers2"><i class="fa-solid fa-cash-register"></i></button>
+                <button class="btn buttonPers2"><i class="fa-solid fa-print"></i></button>
+                <button class="btn buttonPers2"><i class="fa-solid fa-floppy-disk"></i></button>
+                <button routerLink="/vendita" class="btn"><i class="fa-solid fa-door-open"></i></button>
+              </div>
+            </div>
+
+          </div>
+
+
+
       <!-- Sezione pagamento -->
-      <!-- Campo per inserire l'importo di pagamento -->
       <!-- Campo per inserire l'importo di pagamento -->
       <div class="contPagamento">
         <div class="pagamento">
